<resources>
    <string name="app_name">Money Tracker</string>
    <string name="logowithname">LogoWithName</string>
    <string name="track_smarter_save_better">Track Smarter. Save Better</string>
    <string name="budget_your_way_to_a_brighter_tomorrow_one_transaction_at_a_time">Budget your way to a brighter tomorrow — one transaction at a time</string>
    <string name="next">next</string>
    <string name="welcome_to_money_tracker">Welcome to Money Tracker</string>
    <string name="effortlessly_manage_your_finances_and_take_control_of_your_future">Effortlessly manage your finances and take control of your future</string>
    <string name="say_hello_to_financial_freedom">Say Hello to Financial Freedom</string>
    <string name="start_your_journey_toward_smarter_spending_and_better_saving">Start your journey toward smarter spending and better saving.</string>
    <string name="get_started">Get Started</string>
    <string name="login_here">Login Here ...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register">REGISTER</string>
    <string name="register_here">Register Here ...</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-Enter password</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="budget">Budget</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new_transaction">Add New Transaction</string>
    <string name="utilities">Utilities</string>
    <string name="expense">Expense</string>
    <string name="electric">electric</string>
    <string name="income_and_expense_analytics">Income and Expense Analytics</string>
    <string name="list_of_recent_transactions">List of recent transactions</string>
</resources>