<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uis.analytics.Analytics">


    <!-- Title Header -->
    <TextView
        android:id="@+id/analyticsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/income_and_expense_analytics"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="#6200EE"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Chart Container -->
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="332dp"
        android:layout_height="450dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/analyticsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Color Legend -->
    <LinearLayout
        android:id="@+id/colorLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/pieChart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Income Box -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="48dp"> <!-- 🔼 Increased gap -->

            <View
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="6dp"
                android:background="#00C853" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Income"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Expense Box -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="6dp"
                android:background="#D32F2F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expense"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/orange"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="6dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="5">

        <!-- Records -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/navHome"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home"
                android:src="@drawable/img_4"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Charts -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/navAnalytics"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/analytics"
                android:src="@drawable/img_5"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analytics"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Add Button (Center) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/navAdd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add"
                android:scaleType="fitCenter"
                android:src="@drawable/img_6" />
        </LinearLayout>

        <!-- Reports -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/navBudget"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/budget"
                android:src="@drawable/img_7"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Me/Profile -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/navSettings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/settings"
                android:src="@drawable/img_8"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>